2010-07-22  Andras Becsi  <abecsi@webkit.org>

        Reviewed by Antonio Gomes.

        [Qt] Implement WebContext::applicationCacheDirectory() for the Qt port of WebKit2.
        https://bugs.webkit.org/show_bug.cgi?id=42830

        * UIProcess/qt/WebContextQt.cpp: Added.
        (WebKit::WebContext::applicationCacheDirectory):

2010-07-22  Balazs Kelemen  <kb@inf.u-szeged.hu>

        Unreviewed build fix.

        [Qt] Fix WebKit2 build

        https://bugs.webkit.org/show_bug.cgi?id=42638

        * UIProcess/API/qt/qwkpage_p.h:
        (QWKPagePrivate::setCursor): Added empty implementation.

2010-07-22  Balazs Kelemen  <kb@inf.u-szeged.hu>

        Reviewed by Antonio Gomes.

        Lazy cursor creation should be guarded by #if USE(LAZY_NATIVE_CURSOR) in WebKit2

        https://bugs.webkit.org/show_bug.cgi?id=42622

        * Shared/WebCoreArgumentCoders.h:
        * UIProcess/WebPageProxy.cpp:
        (WebKit::WebPageProxy::didReceiveMessage):
        * WebProcess/WebCoreSupport/WebChromeClient.cpp:
        (WebKit::WebChromeClient::setCursor):

2010-07-22  Jon Honeycutt  <jhoneycutt@apple.com>

        Build fix. Unreviewed.

        * win/WebKit2WebProcess.vcproj:
        Remove the pre- and post-build events, so that they will use the value
        inherited from the vsprops.

2010-07-21  Darin Adler  <darin@apple.com>

        Reviewed by Sam Weinig.

        WebKitTestRunner needs layoutTestController.dumpChildFrameScrollPositions
        https://bugs.webkit.org/show_bug.cgi?id=42548

        Added WKBundleFrameCopyName.

        * WebProcess/InjectedBundle/API/c/WKBundleFrame.cpp:
        (WKBundleFrameCopyName): Added.
        * WebProcess/InjectedBundle/API/c/WKBundleFrame.h: Ditto.

        * WebProcess/WebPage/WebFrame.cpp:
        (WebKit::WebFrame::name): Added.
        * WebProcess/WebPage/WebFrame.h: Ditto.

2010-07-21  Darin Adler  <darin@apple.com>

        Reviewed by Sam Weinig.
